more testing to fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ html, head, body {
     z-index: 1000;
     position: fixed;
     top: 100px;
-    right:0px;
+    right:0.25em;
 }
 
 .social ul {
